# Training_Modern_AI_rs

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/experiments/: Cargo.toml
crates/experiments/src/: lib.rs  plot_utils.rs
crates/experiments/src/harness/: all_remaining.rs  harness_effectiveness.rs  mod.rs  multi_agent_coordination.rs  throughput_vs_perfection.rs
crates/experiments/src/ml_infra/: all_remaining.rs  context_length.rs  cost_per_token.rs  mod.rs  roofline.rs
crates/physics/: Cargo.toml
crates/physics/src/: agents.rs  constants.rs  cost.rs  knowledge.rs  latency.rs  lib.rs  moe.rs  pipeline.rs  pricing.rs  reviews.rs  scaling.rs  throughput.rs  types.rs
crates/web/: Cargo.toml
crates/web/src/: chart.rs  lib.rs  main.rs  render.rs  routes.rs
crates/web/src/templates/: index.html
