[workspace]
resolver = "2"
members = ["crates/physics", "crates/experiments", "crates/web", "crates/cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/SunnyDevendranadh/Training_Modern_AI_rs"
homepage = "https://github.com/SunnyDevendranadh/Training_Modern_AI_rs"
readme = "README.md"
keywords = ["transformer", "inference", "roofline", "scaling-laws", "education"]
categories = ["science", "simulation", "command-line-utilities"]
rust-version = "1.75"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ndarray = "0.17"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros", "json"] }
askama = "0.12"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
clap = { version = "4", features = ["derive"] }
rand = "0.8"
rand_distr = "0.4"
approx = "0.5"

[profile.release]
opt-level = 3
lto = true
