[package]
name = "experiments"
version.workspace = true
edition.workspace = true
description = "Static experiments for ML infrastructure and agent harness engineering"

[dependencies]
physics = { path = "../physics" }
ndarray = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
