[package]
name = "physics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Core physics and economics computations for transformer inference"

[dependencies]
ndarray = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
